--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "deepmerge": "^1.2.0",
     "normalize-wheel": "^1.0.1",
     "resize-observer-polyfill": "^1.5.0",
-    "throttle-debounce": "^1.0.1"
+    "throttle-debounce": "^1.0.1",
+    "vue-qr": "^4.0.9"
   },
   "peerDependencies": {
     "vue": "^2.5.17"
